fix overflow

--- a/css/style.less
+++ b/css/style.less
@@ -71,7 +71,8 @@ a {
   @media (min-width: 1024px) and (max-width: 1440px) {
     width: 375px;
     height: 667px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
 
